[package]
name = "spacechains"
version = "0.1.0"
authors = ["Ruben Somsen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
sha2 = "0.10.1"
serde_json = "1.0.56"
bs58 = "0.4.0"
ripemd = "0.1.0" 
secp256k1 = {version = "0.21", features = ["bitcoin_hashes","rand-std"]}